--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 		></script>
 		<script>
 			window.themartecWidget = window.themartecWidget || {};
-			var widgetId = Pwmwnza;
+			var widgetId = "Pwmwnza";
 			function tmWidget(arguments) {
 				themartecWidget = Object.assign({
 					...themartecWidget,
