--- a/index.html
+++ b/index.html
@@ -433,28 +433,9 @@
 				</div>
 			</footer>
 		</div>
-       <widget-client id="martec-widget" widgetid="qrCKjaE"></widget-client> 
+       <widget-client widgetId="vcY62xb" type="embed"></widget-client> 
 
 		<script src="dist/js/main.min.js"></script>
-		<script
-			async=""
-			src="https://widget-dev.themartec.com/widget.js"
-		></script>
-		<script>
-			window.themartecWidget = window.themartecWidget || {};
-			var widgetId = "qrCKjaE";
-			function tmWidget(arguments) {
-				themartecWidget = Object.assign({
-					...themartecWidget,
-					...arguments,
-				});
-			}
-			tmWidget({ now: new Date() });
-			tmWidget({ widgetId: widgetId });
-
-
-			
-
-		</script>
+		<script async src="https://widget-staging.themartec.com/widget.js"></script><script>window.themartecWidget=window.themartecWidget||{};var widgetId='vcY62xb';function tmWidget(arguments){themartecWidget = Object.assign({...themartecWidget,...arguments});}tmWidget({now:new Date()});tmWidget({widgetId:'vcY62xb'});</script>
 	</body>
 </html>
