--- a/index.html
+++ b/index.html
@@ -436,6 +436,6 @@
        <widget-client widgetId="mkRwpdT" type="embed"></widget-client> 
 
 		<script src="dist/js/main.min.js"></script>
-		<script async src="https://widget-staging.themartec.com/widget.js"></script><script>window.themartecWidget=window.themartecWidget||{};var widgetId='vcY62xb';function tmWidget(arguments){themartecWidget = Object.assign({...themartecWidget,...arguments});}tmWidget({now:new Date()});tmWidget({widgetId:'vcY62xb'});</script>
+		<script async src="https://widget-staging.themartec.com/widget.js"></script><script>window.themartecWidget=window.themartecWidget||{};var widgetId='mkRwpdT';function tmWidget(arguments){themartecWidget = Object.assign({...themartecWidget,...arguments});}tmWidget({now:new Date()});tmWidget({widgetId:'mkRwpdT'});</script>
 	</body>
 </html>
