--- a/index.html
+++ b/index.html
@@ -435,7 +435,10 @@
 		</div>
        <widget-client widgetId="mkRwpdT" type="embed"></widget-client> 
 
-		<script src="dist/js/main.min.js"></script>
-		<script async src="https://widget-staging.themartec.com/widget.js"></script><script>window.themartecWidget=window.themartecWidget||{};var widgetId='mkRwpdT';function tmWidget(arguments){themartecWidget = Object.assign({...themartecWidget,...arguments});}tmWidget({now:new Date()});tmWidget({widgetId:'mkRwpdT'});</script>
+		<!--Widget Code Embed-->
+<widget-client widgetId="WkzJyNA" type="embed"></widget-client>
+
+<!--Widget Code Popup-->
+<script async src="https://widget-staging.themartec.com/widget.js"></script><script>window.themartecWidget=window.themartecWidget||{};var widgetId='WkzJyNA';function tmWidget(arguments){themartecWidget = Object.assign({...themartecWidget,...arguments});}tmWidget({now:new Date()});tmWidget({widgetId:'WkzJyNA'});</script>
 	</body>
 </html>
